Fix spacing and color issues
The spacing between the Zones header should be 6px not 12px

The labels in the title at the top of the non-active zone should
be grey not white


http://bugs.meego.com/show_bug.cgi?id=1569

--- a/panels/zones/data/style/switcher.css
+++ b/panels/zones/data/style/switcher.css
@@ -37,7 +37,7 @@ SwWindow#focused-window
 
 MxLabel.zone-title
 {
-  color: white;
+  color: #909190;
   padding: 4;
   border-image: url('content-panel-header-grey.png') 4;
   font-size: 16;
